# drone_project

./: .gitmodules
BluePill_test/Bluepill_test/: .mxproject  Bluepill_test.ioc  CMakeLists.txt  Makefile  arm.cmake
BluePill_test/Bluepill_test/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  stm32test.elf
simplex_test/: CMakeLists.txt  arm.cmake  build.sh  run_docker.sh
simplex_test/src/: main.c
stm_test/: Bluepill_test.map  CMakeLists.txt
stm_test/src/: main.c  stm32f1xx_it.c
usb-com-test/: .mxproject  Makefile  usb-com-test.ioc
usb-com-test/Core/Src/: main.c
